--- a/src/main/resources/Application.yaml
+++ b/src/main/resources/Application.yaml
@@ -14,7 +14,11 @@ spring:
 swagger:
   application:
     description: Weather Product Microservice
-    version: 0.10
+    version: 0.11
+    apikey: ${openweather_apikey}
+
+apiInterface:
+  key: GGG
 
 
 ---
