--- a/src/main/resources/Application.yaml
+++ b/src/main/resources/Application.yaml
@@ -14,7 +14,8 @@ spring:
 swagger:
   application:
     description: Weather Product Microservice
-    version: 0.11
+    version: 0.12
+    apikey: ${openweather_apikey}
 
 
 ---
